feat: added ci/cd and api gateway
